--- a/addparticipants/src/App.css
+++ b/addparticipants/src/App.css
@@ -1,103 +1,16 @@
- .phone{
-  transform: rotate(225deg); 
- 
-} 
-
-
-
 .App {
-  text-align: center;
- 
-  width: 100%;
-  height: 100%; 
-}
-h3{
-  color:white; 
-}
-.mainclass{
-  
-
-  width: 100%;
-  height: 100vh; 
-}
-.main{
-  padding: 15px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: column;
-  background: rgb(82, 77, 77);
-
-}
-
-
-.subcorner{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  line-height: 1;
-}
-.corner{
-  width: 100%;
-  /* position: relative; */
- 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: fit-content;
-}
-.cornerleft{
-  
- color: white;
-  
-}
-.cornerright{
-  
-  color: white;
-}
-.record{
-  font-size: 20px;
-  font-weight: 600;
-  color: white;
-}
-
-
-
-.formaudiclass{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 400px; 
-  background: white;
-  margin-bottom: 70px;
-  border-radius: 50px;
-  padding:15px 25px;
-}
-
-/* addparticipants UI styles */
-
-
-
-.size{
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top:0px;
-  left: 36%;
-  position: fixed;
-  margin-top: 50px;
-  background-color: white;
+  margin-top: 40px;
 }
-
 .helpclass{
   
  
   width: 520px;
   height: 600px;
- 
+  padding-bottom: 11px;
  
   }
   .helptitle{
@@ -116,7 +29,7 @@ h3{
     margin-top: 0px;
     padding-bottom: 35px;
     font-size: 25px;
-    color: white;   
+    
     
   }
   .help{
@@ -125,7 +38,7 @@ h3{
   }
 
   .search-box{
-    
+    height: 35px;
     border-radius: 50px;
     background: white;
     border: 2px solid rgb(98, 98, 99);
@@ -137,12 +50,12 @@ h3{
    padding: 5px 15px 5px 0px;
   }
   .searchicon{
-    font-size: 25px;
+    font-size: 22px;
   }
   .inpsearch{
-    width: 440px;
+    width: 520px;
     
-    height: 30px;
+    height: 40px;
     font-size: 20px;
     font-weight: 700;
   }
@@ -162,13 +75,11 @@ h3{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    padding: 5px 10px;
+    padding: 0px 10px;
 
   }
 
   .name{
-    font-weight: 700;
-    font-size: 20px;
     padding-left: 20px;
     
   }
@@ -186,10 +97,7 @@ h3{
   font-weight: 700;
   
 }
-.done:focus {
-  outline: none;
-  /* box-shadow: none; */
-}
+
 
  .check{
    
@@ -212,10 +120,6 @@ h3{
 
 .popcolor{
   padding-top: 3px;
+ padding-bottom: 20px;
  
- 
-}
-.doneinner{
-  background-color: white;
-  
 }
