--- a/video/src/App.css
+++ b/video/src/App.css
@@ -1,4 +1,6 @@
-
+*{
+  overflow: hidden;
+}
 .phone{
   transform: rotate(225deg);
 }
@@ -74,3 +76,147 @@ h3{
 
 
 
+/* addparticipants UI styles */
+
+
+
+.size{
+  position: fixed;
+  left: 36%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  background-color: white;
+}
+
+.helpclass{
+  
+ 
+  width: 520px;
+  height: 600px;
+ 
+ 
+  }
+  .helptitle{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 80px;
+    background: rgb(112, 127, 212);
+    color: white;
+    font-weight: 700;
+    font-size: 21px;
+  }
+
+  .cross{
+    margin-left: 5px;
+    margin-top: 0px;
+    padding-bottom: 35px;
+    font-size: 25px;
+    color: white;   
+    
+  }
+  .help{
+    padding-left: 0px;
+    margin-right: 30px;
+  }
+
+  .search-box{
+    
+    border-radius: 50px;
+    background: white;
+    border: 2px solid rgb(98, 98, 99);
+   display: flex;
+   opacity: 0.5;
+   align-items: center;
+   justify-content: space-between;
+   margin: 7px;
+   padding: 5px 15px 5px 0px;
+  }
+  .searchicon{
+    font-size: 25px;
+  }
+  .inpsearch{
+    width: 440px;
+    
+    height: 30px;
+    font-size: 20px;
+    font-weight: 700;
+  }
+  #icodiscurs{
+    outline: none;
+    border: none;
+    margin-left: 20px;
+  }
+  .contact{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 10px;
+
+  }
+  .contact1{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 5px 10px;
+
+  }
+
+  .name{
+    font-weight: 700;
+    font-size: 20px;
+    padding-left: 20px;
+    
+  }
+
+.done{
+  
+  padding-bottom: 7px;
+  background: rgb(112, 127, 212);
+  border-radius: 50px;
+  border: none;
+  color: white;
+  width: 150px;
+  height: 40px;
+  font-size: 20px;
+  font-weight: 700;
+  
+  
+}
+.done:focus {
+  outline: none;
+  /* box-shadow: none; */
+}
+
+
+ .check{
+   
+   opacity: .5;
+  outline: 3px solid #000;
+  
+  outline-offset: -3px;
+    
+} 
+.contactlist{
+
+  
+  height: 400px;
+ 
+ 
+  
+  
+  overflow: auto;
+}
+
+.popcolor{
+  padding-top: 3px;
+ 
+ 
+}
+.doneinner{
+  background-color: white;
+  
+}
